--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^16.3.0"
+    "@types/node": "^16.3.0",
+    "rxjs": "7.2.0"
   }
 }
