--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    // "test": "tsc -v",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -11,5 +12,8 @@
   "dependencies": {
     "@types/node": "^16.3.0",
     "rxjs": "7.2.0"
+  },
+  "devDependencies": {
+    "typescript": "^4.3.5"
   }
 }
