--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "rxjs": "7.2.0"
   },
   "devDependencies": {
+    "@tsconfig/recommended": "^1.0.1",
     "eslint": "7.30.0",
     "eslint-loader": "4.0.2",
     "eslint-plugin-import": "2.23.4",
