--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "watch": "tsc -w"
+    "watch": "tsc -w",
+    "webpack": "webpack"
   },
   "author": "",
   "license": "ISC",
@@ -19,7 +20,11 @@
     "eslint": "7.30.0",
     "eslint-loader": "4.0.2",
     "eslint-plugin-import": "2.23.4",
-    "typescript": "^4.3.5"
+    "ts-loader": "^9.2.5",
+    "typescript": "^4.3.5",
+    "webpack": "^5.51.1",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.0.0"
   },
   "eslintConfig": {
     "extends": [
