try webpack serve

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "watch": "tsc -w",
-    "webpack": "webpack"
+    "webpack": "webpack",
+    "dev": "webpack serve"
   },
   "author": "",
   "license": "ISC",
