--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "watch": "tsc -w",
     "webpack": "webpack",
-    "dev": "webpack serve"
+    "dev": "webpack serve",
+    "tsc": "tsc"
   },
   "author": "",
   "license": "ISC",
