--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^16.3.0",
+    "moment": "^2.29.4",
     "rxjs": "7.2.0"
   },
   "devDependencies": {
