--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "rxjs": "7.2.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.18.10",
     "@tsconfig/recommended": "^1.0.1",
     "eslint": "7.30.0",
     "eslint-loader": "4.0.2",
     "eslint-plugin-import": "2.23.4",
+    "jest": "^28.1.3",
+    "jest-cli": "^28.1.3",
     "ts-loader": "^9.2.5",
     "typescript": "^4.3.5",
     "webpack": "^5.51.1",
