--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,17 @@
 {
-    "extends": "@tsconfig/recommended/tsconfig.json",
-    "compilerOptions": {
-        "strict": true,
-        "target": "ES2015",
-        "module": "CommonJS",
-        "outDir": "./dist",
-        "rootDir": "./",
-        "moduleResolution": "node",
-        "removeComments": true
-    },
-    "include": [
-        "src/**/*.ts"
-    ],
-    "exclude": [
-        "node_modules"
-    ],
-    "watchOptions": {
-        "excludeDirectories": ["**/node_modules", "dist"]
-    }
+	"extends": "@tsconfig/recommended/tsconfig.json",
+	"compilerOptions": {
+		"strict": true,
+		"target": "ES2017",
+		"module": "CommonJS",
+		"outDir": "./dist",
+		"rootDir": "./",
+		"moduleResolution": "node",
+		"removeComments": true
+	},
+	"include": ["src/**/*.ts"],
+	"exclude": ["node_modules"],
+	"watchOptions": {
+		"excludeDirectories": ["**/node_modules", "dist"]
+	}
 }
