config babel preset-env

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
 		"rootDir": "./",
 		"moduleResolution": "node",
 		"removeComments": true
+		// "esModuleInterop": true // I added type: module in package.json, and I still want to use ts-node. actually does not work
 	},
 	"include": ["src/**/*.ts"],
 	"exclude": ["node_modules"],
