--- a/package.json
+++ b/package.json
@@ -1,69 +1,81 @@
 {
-  "name": "typescript-designpatterns-rxjs",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
-    "watch": "tsc -w",
-    "webpack": "webpack",
-    "dev": "webpack serve",
-    "tsc": "tsc"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@types/node": "^16.3.0",
-    "moment": "^2.29.4",
-    "rxjs": "7.2.0"
-  },
-  "devDependencies": {
-    "@babel/preset-env": "^7.18.10",
-    "@tsconfig/recommended": "^1.0.1",
-    "eslint": "7.30.0",
-    "eslint-loader": "4.0.2",
-    "eslint-plugin-import": "2.23.4",
-    "jest": "^28.1.3",
-    "jest-cli": "^28.1.3",
-    "ts-loader": "^9.2.5",
-    "typescript": "^4.3.5",
-    "webpack": "^5.51.1",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.0.0"
-  },
-  "eslintConfig": {
-    "extends": [
-      "eslint:recommended",
-      "plugin:react/recommended",
-      "plugin:import/errors",
-      "plugin:import/warnings"
-    ],
-    "parser": "babel-eslint",
-    "parserOptions": {
-      "ecmaVersion": 2018,
-      "sourceType": "module",
-      "ecmaFeatures": {
-        "jsx": true
-      }
-    },
-    "env": {
-      "browser": true,
-      "node": true,
-      "es6": true,
-      "jest": true
-    },
-    "rules": {
-      "no-debugger": "off",
-      "no-console": "off",
-      "no-unused-vars": "warn",
-      "react/prop-types": "warn"
-    },
-    "settings": {
-      "react": {
-        "version": "detect"
-      }
-    },
-    "root": true
-  }
+	"name": "typescript-designpatterns-rxjs",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "jest",
+		"build": "tsc",
+		"watch": "tsc -w",
+		"webpack": "webpack",
+		"dev": "webpack serve",
+		"tsc": "tsc"
+	},
+	"author": "",
+	"license": "ISC",
+	"babel": {
+		"presets": [
+			[
+				"@babel/preset-env",
+				{
+					"target": {
+						"node": "current"
+					}
+				}
+			]
+		]
+	},
+	"dependencies": {
+		"@types/node": "^16.3.0",
+		"moment": "^2.29.4",
+		"rxjs": "7.2.0"
+	},
+	"devDependencies": {
+		"@babel/preset-env": "^7.18.10",
+		"@tsconfig/recommended": "^1.0.1",
+		"eslint": "7.30.0",
+		"eslint-loader": "4.0.2",
+		"eslint-plugin-import": "2.23.4",
+		"jest": "^28.1.3",
+		"jest-cli": "^28.1.3",
+		"ts-loader": "^9.2.5",
+		"typescript": "^4.3.5",
+		"webpack": "^5.51.1",
+		"webpack-cli": "^4.8.0",
+		"webpack-dev-server": "^4.0.0"
+	},
+	"eslintConfig": {
+		"extends": [
+			"eslint:recommended",
+			"plugin:react/recommended",
+			"plugin:import/errors",
+			"plugin:import/warnings"
+		],
+		"parser": "babel-eslint",
+		"parserOptions": {
+			"ecmaVersion": 2018,
+			"sourceType": "module",
+			"ecmaFeatures": {
+				"jsx": true
+			}
+		},
+		"env": {
+			"browser": true,
+			"node": true,
+			"es6": true,
+			"jest": true
+		},
+		"rules": {
+			"no-debugger": "off",
+			"no-console": "off",
+			"no-unused-vars": "warn",
+			"react/prop-types": "warn"
+		},
+		"settings": {
+			"react": {
+				"version": "detect"
+			}
+		},
+		"root": true
+	}
 }
