--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "typescript-designpatterns-rxjs",
 	"version": "1.0.0",
 	"description": "",
+	"type": "module",
 	"main": "module",
 	"scripts": {
 		"test": "jest",
